# provenance-gate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_2.0.2_0.1.5.md  SECURITY.md  bandit.yaml  provenance-gate-installer.py  provenance-gate.py  provenance_gate_skill.hermes-skill  pyproject.toml  semgrep.yml  t1_verify.py
.github/workflows/: ci.yml
examples/: live_demo.py
extensions/: PROGRESS_DIARY.md
extensions/provenance_gate_signer/: pyproject.toml
extensions/provenance_gate_signer/provenance_gate_signer/: service.py
extensions/provenance_gate_signer/provenance_gate_signer/tests/: test_fuzz.py  test_signer.py  test_signer_coverage.py
hooks/: pre_commit_check.sh  raw_output_guard.sh  session_verify.sh  termux_boot_start-signer.sh
provenance_gate_skill/: manifest.json
provenance_gate_skill/code/: __init__.py  provenance_gate_skill.py
scripts/: sast_gate.sh  sast_invariant_scan.py  t1_ci_evidence.py
src/provenance_gate/: __init__.py  actors.py  authority.py  capture.py  evidence.py  governance.py  guards.py  ledger.py  pipeline.py  rules.py  session.py  tiers.py
tests/: test_capture.py  test_coverage_completion.py  test_coverage_gaps.py  test_governance.py  test_guards.py  test_import.py  test_ledger.py  test_pipeline.py  test_preflight_guard.py  test_rules.py  test_rules_fuzz.py  test_session.py  test_tiers.py
