[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-gate"
version = "2.0.1"
description = "Gate agent actions by evidence quality tier with structural governance and actor lineage"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "NeuralVault Contributors"}]
readme = "README.md"

keywords = [
    "governance",
    "agents",
    "provenance",
    "ledger",
    "evidence",
    "hallucination-defense",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/TheNeuralVault/provenance-gate"
Repository = "https://github.com/TheNeuralVault/provenance-gate"
Issues = "https://github.com/TheNeuralVault/provenance-gate/issues"
Changelog = "https://github.com/TheNeuralVault/provenance-gate/blob/main/CHANGELOG.md"
Security = "https://github.com/TheNeuralVault/provenance-gate/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.5",
    "hypothesis>=6.0",
    "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/provenance_gate --cov-report=term-missing --cov-fail-under=95"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/provenance_gate"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM300", "B011"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
skips = [
    "B101",  # assert_used (we use asserts as contract checks in tests/guard paths)
    "B603",  # subprocess_without_shell (we intentionally use subprocess without shell)
    "B607",  # start_process_with_partial_path
]
exclude_dirs = ["tests", "build", ".venv", "examples"]

